--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,9 +1,9 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: -webkit-linear-gradient(left, #6a11cb, #2575fc);
   transition: all 0.3s ease;
-  height: 70px;
+  height: 90px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
@@ -17,8 +17,8 @@
 
 /* User Avatar */
 .navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
+  height: 50px;
+  width: 50px;
   border-radius: 50%;
 }
 
@@ -37,11 +37,14 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
-  font-size: 14px;
+  font-size: 20px;
+  color: white;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.07), 2px 2px 2px 2px rgba(0,0,0,0.07);
+  border-radius: 20px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: white;
+  opacity:0.6;
   text-decoration: none;
 }
 
