--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,13 +1,18 @@
 
 <div class="container">
-  <h1 id="main-list-title">Services</h1>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-1">
+      <h1 id="main-list-title">Services</h1>
+    </div>
   <div class="row">
     <% @services.each do |service| %>
-      <div class="col-xs-12 col-sm-4">
-          <div class="card-description">
+      <div class="col-md-6 col-md-offset-1">
+          <div class="list-description">
             <h2><%= link_to service.category, services_path(service) %> </h2>
           </div>
       </div>
     <% end %>
   </div>
 </div>
+
+
