navbar-footer-updated

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,6 +13,7 @@
 /* Logo */
 .navbar-wagon-brand img {
   height: 50px;
+  color:white;
 }
 
 /* User Avatar */
@@ -49,10 +50,16 @@
 }
 
 /* Dropdown menu */
+
+.fas fa-caret-square-down{
+  height: 20px;
+}
+
+
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
+  border-color: transparent;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
