--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -4,9 +4,6 @@
 // @import "profile";
 // @import "map";
 
-.container{
-  margin: 0;
-}
 
 body {
   background: -webkit-linear-gradient(left, #6a11cb, #2575fc);
@@ -15,6 +12,14 @@ body {
 
 h2 {
   margin: 0;
+}
+
+.container{
+  text-align: center;
+}
+
+.footer{
+ flex-shrink: 0;
 }
 
 .list-description {
