--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,13 @@
     <%= render 'shared/navbar' %>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+    <div>
     <%= render 'shared/footer' %>
+    </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
+
+
+
