--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container_services">
   <div class="row">
     <div class="col-md-6 col-md-offset-1">
       <h1 id="main-list-title">Services</h1>
