--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -5,9 +5,15 @@
     <% @services.each do |service| %>
       <div class="col-xs-12 col-sm-4">
           <div class="card-description">
-            <h2><%= link_to service.category, services_path(service) %> </h2>
+            <h2><%= link_to service.category, service_path(service) %> </h2>
           </div>
       </div>
     <% end %>
+  </div>
+</div>
+<hr>
+<div class="container">
+  <div class="row">
+    <%= link_to "Add a Service", new_service_path(@service), class: "btn btn-primary"%>
   </div>
 </div>
