--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,14 @@
   </head>
   <body>
     <%= render 'shared/navbar' %>
-    <p class="alert"><%= alert %></p>
+    <%= render 'shared/flashes' %>
+
     <%= yield %>
+
     <div>
     <%= render 'shared/footer' %>
     </div>
+
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
