--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,3 +9,5 @@ $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
 $gradient: -webkit-linear-gradient(left, #6a11cb, #2575fc);
+$reverse-gradient: -webkit-linear-gradient(left, #2575fc, #6a11cb);
+$link-grey: #C1C0B9;
