--- a/app/views/services/new.html.erb
+++ b/app/views/services/new.html.erb
@@ -5,7 +5,7 @@
         <%= simple_form_for(@service) do |f| %>
         <%= f.input :category %>
         <%= f.input :price %>
-        <%= f.button :submit, :class => "btn btn-primary" %>
+        <%= f.button :submit, :class => "btn" %>
       <% end %>
     </div>
   </div>
