--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -8,7 +8,7 @@
         <p> <%= link_to "Delete service", service_path(@service),
             method: :delete,
             data: { confirm: "Are you sure?" },
-           class: "btn btn-danger"%></p>
+           class: "btn"%></p>
     </div>
   </div>
 </div>
