Created limited navbar for non-logged in users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,13 @@
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
-    <%= render 'shared/navbar' %>
+
+    <% if user_signed_in? %>
+      <%= render 'shared/navbar' %>
+    <% else %>
+      <%= render 'shared/limitednavbar' %>
+    <% end %>
+
     <p class="alert"><%= alert %></p>
     <%= yield %>
     <div>
@@ -20,6 +26,3 @@
     <%= javascript_pack_tag 'application' %>
   </body>
 </html>
-
-
-
