--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,6 +4,6 @@
     <a href="#"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="navbar-copyright">
-   <h1>Made by Voluntary team</h1>
+   <h1>Made by © Voluntary, Inc. with <i class="fa fa-heart"></i></h1>
   </div>
 </div>
