--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,30 +1,30 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+    <div class="form-row">
+      <%= f.input :first_name, label: false, placeholder: 'First name', required: false %>
+      <%= f.input :last_name, label: false, placeholder: 'Last name', required: false %>
+      <%= f.input :email, label: false, placeholder: 'Email', required: true, autofocus: true %>
 
-  <div class="form-inputs">
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+      <% end %>
 
-    <%= f.input :first_name, required: false %>
-    <%= f.input :last_name, required: false %>
-    <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :password, label: false, placeholder: 'Password (leave it blank if you do not want to change it)', autocomplete: "off", required: false %>
+      <%= f.input :password_confirmation, label: false, placeholder: 'Please confirm password', required: false %>
+      <%= f.input :current_password, label: false, placeholder: 'We need your current password to confirm your changes', required: true %>
+    </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <div class="form-actions">
+      <%= f.button :submit, "Update"%>
+    </div>
     <% end %>
 
-    <%= f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false %>
-    <%= f.input :password_confirmation, required: false %>
-    <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
+    <p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+    <%= link_to "Back", :back %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
