--- a/app/views/services/index_services_by_category.html.erb
+++ b/app/views/services/index_services_by_category.html.erb
@@ -5,12 +5,14 @@
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
         <h3><% @services.each do |service| %></h3>
         <p> ID: <%= service.id %> </p>
+        <p> Name: <%= service.user.first_name %> <%= service.user.last_name %></p>
         <p> Price: <%= service.price %></p>
         <p> <%= link_to "Book me", service_bookings_path(service), method: :post %></p>
         <p> <%= link_to "Delete service", service_path(service),
             method: :delete,
             data: { confirm: "Are you sure?" },
            class: "btn btn-danger"%></p>
+           <p><%= link_to "Back to service list", service_categories_path %></p>
       <% end %>
     </div>
   </div>
