--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -38,7 +38,9 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  font-size: 20px;
+  font-size: 18px;
+  margin-left: 10px;
+  font-weight: lighter;
   color: white;
   box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.07), 2px 2px 2px 2px rgba(0,0,0,0.07);
   border-radius: 20px;
@@ -54,8 +56,6 @@
 .fas fa-caret-square-down{
   height: 20px;
 }
-
-
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
