--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
       <div class="dropdown">
         <img src="https://kitt.lewagon.com/placeholder/users/DamienDaube" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a href="#">Hi <%= current_user.first_name %></li></a>
+          <li><a>Hi <%= current_user.first_name %> ! </li></a>
           <li><%= link_to "Profile", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         </ul>
