--- a/app/views/services/index_services_by_category.html.erb
+++ b/app/views/services/index_services_by_category.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container detail">
   <div class="row">
     <h1> <%= params[:category] %> </h1>
     <div class="col-xs-12 col-sm-6 col-sm-offset-3">
