--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container_services">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-1">
+      <h1 id="main-list-title">My agenda</h1>
+    </div>
+  <div class="row">
+    <% @bookings.each do |booking| %>
+      <div class="col-md-6 col-md-offset-1">
+        <p>Service: <%= booking.service.category %></p>
+        <p>Provider: <%= booking.service.user.first_name %> <%= booking.service.user.last_name %></p>
+        <p>Price: <%= booking.service.price %></p>
+        <p>Date: <%= booking.start_date %></p>
+        <p>Status= <%= booking.status %></p>
+        <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+  </div>
+  <div class="col-md-6 col-md-offset-1">
+  <%= link_to "Back to service list", service_categories_path, class: 'btn btn-primary' %>
+  </div>
+</div>
