--- a/app/views/services/index_services_by_category.html.erb
+++ b/app/views/services/index_services_by_category.html.erb
@@ -23,3 +23,10 @@
     </div>
   </div>
 </div>
+
+<div
+  id="map"
+  style="width: 100vh;
+  height: 100vh;"
+  data-markers="<%= @markers.to_json %>"
+></div>
