--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,15 +4,30 @@
       <h1 id="main-list-title">My agenda</h1>
     </div>
   <div class="row">
-    <% @bookings.each do |booking| %>
-      <div class="col-md-6 col-md-offset-1">
-        <p>Service: <%= booking.service.category %></p>
-        <p>Provider: <%= booking.service.user.first_name %> <%= booking.service.user.last_name %></p>
-        <p>Price: <%= booking.service.price %></p>
-        <p>Date: <%= booking.start_date %></p>
-        <p>Status= <%= booking.status %></p>
-        <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
-      </div>
+
+    <% if @user.role == "beneficiary" %>
+      <% @bookings.each do |booking| %>
+        <div class="col-md-6 col-md-offset-1">
+          <p>Service: <%= booking.service.category %></p>
+          <p>Provider: <%= booking.service.user.first_name %> <%= booking.service.user.last_name %></p>
+          <p>Price: <%= booking.service.price %></p>
+          <p>Date: <%= booking.start_date %></p>
+          <p>Status= <%= booking.status %></p>
+          <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+
+    <% elsif @user.role =="provider" %>
+      <% @bookings.each do |booking| %>
+        <div class="col-md-6 col-md-offset-1">
+          <p>Customer: <%= booking.user.first_name %> <%= booking.user.last_name %></p>
+          <p>Date: <%= booking.start_date %></p>
+          <p>Status= <%= booking.status %></p>
+          <%= link_to "Confirm", booking_path(booking), method: :patch, class: 'btn btn-primary' %>
+          <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
+        </div>
+      <% end %>
+
     <% end %>
   </div>
   <div class="col-md-6 col-md-offset-1">
