--- a/app/views/services/index_services_by_category.html.erb
+++ b/app/views/services/index_services_by_category.html.erb
@@ -1,26 +1,3 @@
-<div class="container detail">
-  <div class="row">
-    <h1>TEST</h1>
-    <% @services.each do |service| %>
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <p> Name: <%= service.user.first_name %> <%= service.user.last_name %></p>
-      <p> Price: <%= service.price %> €</p>
-
-      <%= simple_form_for [service, @booking] do |f| %>
-      <%= f.input :start_date %>
-      <%= f.input :end_date %>
-      <%= f.submit "Book", class: "btn btn-primary" %>
-      <% end %>
-
-      <p> <%= link_to "Delete service", service_path(service),
-      method: :delete,
-      data: { confirm: "Are you sure?" },
-      class: "btn btn-danger"%></p>
-    </div>
-    <% end %>
-
-    <p><%= link_to "Back to service list", service_categories_path, class: "btn btn-success" %></p>
-
 <div class="main-container">
 <!--   <div class="content"> -->
     <div class="row">
@@ -32,7 +9,7 @@
               <h2>Name: <%= service.user.first_name %> <%= service.user.last_name %></h2>
               <h2>Price: <%= service.price %> €</h2>
               <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#booking-service-<%= service.id %>">
-                Book now!
+                Book
               </button>
             </div>
             <!-- Button trigger modal -->
@@ -42,7 +19,7 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Booking <%= service.category %></h4>
+                    <h4 class="modal-title" id="myModalLabel"><%= service.category %></h4>
                   </div>
                   <div class="modal-body">
                     <%= render 'bookings/new_booking', service: service, booking: Booking.new  %>
@@ -55,7 +32,7 @@
       </div>
 
   </div>
-  <!-- </div> -->
+
   <%= link_to "Back to service list", service_categories_path, class: "btn btn-success" %>
 </div>
 
