Corrected navbar-height and footer-height

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,9 @@
 
     <%= render 'shared/flashes' %>
 
-    <%= yield %>
+    <div class="page-content">
+      <%= yield %>
+    </div>
 
     <div>
     <%= render 'shared/footer' %>
