--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: -webkit-linear-gradient(left, #6a11cb, #2575fc);
   transition: all 0.3s ease;
-  height: 80px;
+  height: $navbar-height;
   padding: 0px 30px;
   display: flex;
   align-items: center;
