--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>My Agenda</h3>
+  <h3>My bookings</h3>
 
   <div class="row">
 
@@ -19,6 +19,10 @@
           <p>Status= <%= booking.status %></p>
           <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
         </div>
+
+        <div class="col-md-6 col-md-offset-1">
+          <%= link_to "Back to service list", service_categories_path, class: 'btn btn-primary' %>
+        </div>
       <% end %>
 
     <% elsif @user.role =="provider" %>
@@ -37,11 +41,17 @@
           <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
         </div>
       <% end %>
-    <% end %>
 
-  <div class="col-md-6 col-md-offset-1">
-    <%= link_to "Back to service list", service_categories_path, class: 'btn btn-primary' %>
-  </div>
+      <div class="col-md-6 col-md-offset-1">
+        <h3>Volunteer for a new service</h3>
+        <%= simple_form_for [@service] do |f| %>
+          <%= f.input :category %>
+          <%= f.input :price %>
+          <%= f.input :address %>
+          <%= f.submit "Propose", class: "btn btn-primary", method: :create %>
+        <% end %>
+      </div>
+    <% end %>
 
   </div>
 </div>
