--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,14 +16,17 @@
     display: block;
   }
 }
-h4 {
-  color: black;
-}
-.btn {
-  margin: 15px;
+h1 {
+  margin-left: 110px;
 }
 h2 {
   font-size: 25px;
   padding-top: 5px;
   margin: 5px;
+}
+h4 {
+  color: black;
+}
+.btn {
+  margin: 15px;
 }
