--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -31,6 +31,7 @@
   cursor: pointer;
   padding: 0 20px;
 }
+
 /* Navbar link */
 .navbar-wagon-link {
   font-size: 18px;
@@ -47,6 +48,11 @@
   opacity:0.3;
   text-decoration: none;
 }
+
+.navbar-search {
+  margin-left: 10px;
+}
+
 /* Dropdown menu */
 .fas fa-caret-square-down{
   height: 20px;
