--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,32 +3,43 @@
   <!-- Logo -->
   <%= link_to  image_tag("y.png", id: "logo"), new_user_session_path, class: 'navbar-wagon-brand' %>
 
+
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
+
     <%= link_to "Agenda", user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Wallet</a>
 
-    <!-- Profile picture with dropdown list -->
+    <!-- Search bar -->
+    <%= form_tag services_path, method: :get do %>
+    <%= text_field_tag :query,
+          params[:query],
+          class: "form-control navbar-search",
+            placeholder: "Find a service"
+            %>
+    <% end %>
+
+      <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
+        <div class="dropdown">
+          <img src="https://kitt.lewagon.com/placeholder/users/DamienDaube" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li><a>Hi <%= current_user.first_name %> ! </li></a>
+            <li><%= link_to "Profile", edit_user_registration_path %></li>
+            <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <!-- Dropdown appearing on mobile only -->
+    <div class="navbar-wagon-item hidden-md hidden-lg">
       <div class="dropdown">
-        <img src="https://kitt.lewagon.com/placeholder/users/DamienDaube" class="avatar dropdown-toggle" id="navbar-wagon-menu" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        <i class="fas fa-caret-square-down" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><a>Hi <%= current_user.first_name %> ! </li></a>
-          <li><%= link_to "Profile", edit_user_registration_path %></li>
-          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to "Agenda", user_path(current_user) %></li>
+          <li><a href="#">Wallet</a></li>
         </ul>
       </div>
     </div>
   </div>
-
-  <!-- Dropdown appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fas fa-caret-square-down" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><%= link_to "Agenda", user_path(current_user) %></li>
-        <li><a href="#">Wallet</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
