--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
               <h2>Customer: <%= booking.user.first_name %> <%= booking.user.last_name %></h2>
               <h2>Date: <%= booking.start_date %></h2>
               <h2>Status= <%= booking.status %></h2>
-              <%if booking.status == "pending" %>
+              <%if booking.status == "Pending" %>
                 <%= link_to "Confirm", booking_path(booking), method: :patch, class: 'btn btn-primary' %>
               <% end %>
               <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %> </h2>
