improved search bar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,7 @@
 
     <%= link_to "Agenda", user_path(current_user), class: "navbar-wagon-item navbar-wagon-link" %>
     <a href="" class="navbar-wagon-item navbar-wagon-link">Wallet</a>
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Friends</a>
 
     <!-- Search bar -->
     <%= form_tag services_path, method: :get do %>
