--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6">
       <div class="cards-container">
-        <h1><%= @services.first.category %></h1>
+        <h1><%= @category %></h1>
         <% @services.each do |service| %>
           <div class="card" style="background-image: url()">
             <h2><%= service.user.first_name %> <%= service.user.last_name %></h2>
