--- a/app/assets/stylesheets/layouts/_map.scss
+++ b/app/assets/stylesheets/layouts/_map.scss
@@ -3,7 +3,8 @@
 }
 #map {
   flex: 0 0 450px;
-  height: 100%;
+  width: 100%;
+  height: 580px;
   position: sticky !important; /* !important to override Gmaps inline CSS */
   top: 0 !important;
   border-radius: 5px;
