--- a/app/views/services/index_services_by_category.html.erb
+++ b/app/views/services/index_services_by_category.html.erb
@@ -31,16 +31,16 @@
             </div>
           </div>
         <% end %>
+          <%= link_to "Back to service list", service_categories_path, class: "btn btn-success" %>
       </div>
     </div>
     <div class="content">
       <div class="col-xs-12 col-sm-6 col-md-6">
-        <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>">
+        <div id="map" data-markers="<%= @markers.to_json %>">
         </div>
       </div>
     </div>
   </div>
-  <%= link_to "Back to service list", service_categories_path, class: "btn btn-success" %>
 </div>
 
 
