--- a/app/views/services/index_service_categories.html.erb
+++ b/app/views/services/index_service_categories.html.erb
@@ -1,13 +1,9 @@
 <div class="container_services">
   <div class="row">
-    <div class="col-md-6 col-md-offset-1">
-      <h1 id="main-list-title">Services</h1>
-    </div>
-  <div class="row">
     <% @categories.each do |category| %>
       <div class="col-md-6 col-md-offset-1">
           <div class="list-description">
-            <h2><%= link_to category, service_category_path(category) %> </h2>
+            <h2><%= link_to category, services_path(category: category) %> </h2>
           </div>
       </div>
     <% end %>
