--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,38 +5,47 @@
 
         <% if @user.role == "beneficiary" %>
 
-          <% @bookings.each do |booking| %>
-            <div class="card" style="background-image: url()">
-              <h2>Service: <%= booking.service.category %></h2>
-              <h2>Provider: <%= booking.service.user.first_name %> <%= booking.service.user.last_name %></h2>
-              <h2>Price: <%= booking.service.price %></h2>
-              <h2>Date: <%= booking.start_date %></h2>
-              <h2>Status= <%= booking.status %></h2>
-              <h2><%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %> </h2>
-            </div>
-          <% end %>
-          <%= link_to "Back to service list", service_categories_path, class: 'btn btn-primary' %>
+        <% @bookings.each do |booking| %>
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()">
+          <div class="class card-background" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()""></div>
+          <div class="card-category"><%= booking.service.category %></div>
 
-        <% elsif @user.role =="provider" %>
+          <div class="card-description">
+            <h2><%= booking.service.user.first_name %> <%= booking.service.user.last_name %></h2>
+            <p><%= booking.service.price %> €</p>
+            <p>Date: <%= booking.start_date %></p>
+            <p>Status: <%= booking.status %></p>
+          </div>
 
-          <% @bookings.each do |booking| %>
-          <div class="card" style="background-image: url()">
-              <h2>Customer: <%= booking.user.first_name %> <%= booking.user.last_name %></h2>
-              <h2>Date: <%= booking.start_date %></h2>
-              <h2>Status= <%= booking.status %></h2>
-              <%if booking.status == "Pending" %>
-                <%= link_to "Confirm", booking_path(booking), method: :patch, class: 'btn btn-primary' %>
-              <% end %>
-              <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %> </h2>
-              </div>
+          <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary btn-lg' %>
+        </div>
+
+        <% end %>
+      </div>
+      <%= link_to "Back to service list", service_categories_path, class: 'btn btn-primary' %>
+
+      <% elsif @user.role =="provider" %>
+
+      <% @bookings.each do |booking| %>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()">
+        <div class="class card-background" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()""></div>
+        <div class="card-category">Customer: <%= booking.user.first_name %> <%= booking.user.last_name %></div>
+        <div class="card-description">
+          <h2>Date: <%= booking.start_date %></h2>
+          <h2>Status= <%= booking.status %></h2>
+          <%if booking.status == "Pending" %>
+          <%= link_to "Confirm", booking_path(booking), method: :patch, class: 'btn btn-primary' %>
           <% end %>
+        </div>
+        <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %> </h2>
+      </div>
+      <% end %>
       <% end %>
 
-      </div>
     </div>
   </div>
 </div>
-
+</div>
 
 
 
