--- a/app/assets/stylesheets/layouts/_map.scss
+++ b/app/assets/stylesheets/layouts/_map.scss
@@ -1,14 +1,11 @@
 .main-container {
-  margin: 0 20px;
+  display: flex;
 }
 #map {
-  flex: 0 0 450px;
+  flex: 0 0 50%;
   width: 100%;
   height: 580px;
   position: sticky !important; /* !important to override Gmaps inline CSS */
-  top: 0 !important;
+  top: 80px !important;
   border-radius: 5px;
-}
-.content {
-  padding-top: 10px;
 }
