Implemented datepicker from Flatpickr with dark theme and human readable date

--- a/app/views/bookings/_new_booking.html.erb
+++ b/app/views/bookings/_new_booking.html.erb
@@ -1,11 +1,5 @@
 <%= simple_form_for [service, booking] do |f| %>
-  <div class="form-inline">
-    <h4>Arrival date</h4>
-    <%= f.input :start_date %>
-  </div>
-  <div class="form-inline">
-    <h4>Departure date</h4>
-    <%= f.input :end_date %>
-  </div>
-  <%= f.submit "Book", class: "btn btn-primary" %>
+  <h4>Please select date and time</h4>
+  <%= f.input :start_date, as: :string, input_html: { class: "datepicker" }%>
+<%= f.submit "Book", class: "btn btn-primary" %>
 <% end %>
