--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,7 +12,12 @@
 
           <div class="card-description">
             <h2><%= booking.service.user.first_name %> <%= booking.service.user.last_name %></h2>
-            <p><%= booking.service.price %> €</p>
+
+            <% if booking.service.price == 0 %>
+              <p> FREE </p>
+            <% else %>
+              <p><%= booking.service.price %> €</p>
+            <% end  %>
             <p> Booking Number: <%= booking.id %> </p>
             <p>Date: <%= booking.start_date %></p>
             <p>Status: <%= booking.status %></p>
