--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,59 +1,72 @@
-<div class="main-container">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-6">
-      <div class="cards-container">
+<div class="main-container" id="agenda-main-container">
+  <div class="cards-container">
 
-        <% if @user.role == "beneficiary" %>
+    <% if @user.role == "beneficiary" %>
 
-        <% @bookings.each do |booking| %>
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()">
-          <div class="class card-background" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()""></div>
-          <div class="card-category"><%= booking.service.category %></div>
-
-          <div class="card-description">
-            <h2><%= booking.service.user.first_name %> <%= booking.service.user.last_name %></h2>
-
-            <% if booking.service.price == 0 %>
-              <p> FREE </p>
-            <% else %>
-              <p><%= booking.service.price %> €</p>
-            <% end  %>
-            <p> Booking Number: <%= booking.id %> </p>
-            <p>Date: <%= booking.start_date %></p>
-            <p>Status: <%= booking.status %></p>
-          </div>
-          <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary btn-lg' %>
-        </div>
-
-        <% end %>
-      </div>
-      <%= link_to "Back to service list", service_categories_path, class: 'btn btn-primary' %>
-
-      <% elsif @user.role =="provider" %>
-
-      <h2> Hi <%= @user.first_name %>, Your Agenda </h2>
-      <% @provider_bookings.each do |booking| %>
+    <% @bookings.each do |booking| %>
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()">
         <div class="class card-background" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()""></div>
-        <div class="card-category">Beneficiary: <%= booking.user.first_name %> <%= booking.user.last_name %></div>
-        <div class="card-description">
-          <p> Booking Number: <%= booking.id %> </p>
-          <h2>Date: <%= booking.start_date %></h2>
-          <h2>Status: <%= booking.status %></h2>
-        </div>
-        <div>
-        <%if booking.status == "pending" %>
-          <h2><%= link_to "Confirm", booking_path(booking), method: :patch, class: 'btn btn-primary' %> </h2>
-        <% end %>
-        <h2><%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %> </h2>
-        </div>
+        <div class="card-category"> <%= booking.service.category %></div>
+          <div class="card-description">
+          </div>
+            <div class="card-date">
+              <div><%= booking.start_date %></div>
+            </div>
+            <div class="card-status">
+              <div><%= booking.status.capitalize %></div>
+            </div>
+            <div class="card-user">
+              <%= booking.service.user.first_name %> <%= booking.service.user.last_name %>
+            </div>
+          <div class="card-price">
+            <% if booking.service.price == 0 %>
+              <div style="color: #00FF00"><b>FREE</b></div>
+            <% else  %>
+              <div><%= booking.service.price %> €</div>
+            <% end  %>
+          </div>
+          <div class="card-book-button text-center">
+            <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary btn-lg' %>
+          </div>
       </div>
       <% end %>
+    <% elsif @user.role =="provider" %>
+
+    <h2> Hi <%= @user.first_name %>, Your Agenda </h2>
+
+    <% @provider_bookings.each do |booking| %>
+    <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()">
+      <div class="class card-background" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url()""></div>
+      <div class="card-category">Beneficiary: <%= booking.user.first_name %> <%= booking.user.last_name %></div>
+      <div class="card-description">
+        <div class="card-date">
+          <div><%= booking.start_date %></div>
+        </div>
+        <div class="class status">
+          <div><%= booking.status.capitalize %></div>
+        </div>
+      </div>
+    <div>
+      <%if booking.status == "pending" %>
+      <div class="card-confirm-button text-center">
+        <%= link_to "Confirm", booking_path(booking), method: :patch, class: 'btn btn-primary' %>
+      </div>
       <% end %>
+      <div class="card-cancel-button text-center">
+        <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary' %>
+      </div>
     </div>
+    </div>
+      <% end %>
+    <% end %>
+  </div>
+<!--   <div id="map" data-markers="<%= @markers.to_json %>">
+  </div> -->
+  <div id="back-to-service">
+    <%= link_to "Back to service list", service_categories_path, class: "btn btn-success" %>
   </div>
 </div>
-</div>
+
 
 
 
