--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
               <div><%= booking.service.price %> €</div>
             <% end  %>
           </div>
-          <div class="card-book-button text-center">
+          <div class="card-delete-button text-center">
             <%= link_to "Cancel", booking_path(booking), method: :delete, class: 'btn btn-primary btn-lg' %>
           </div>
       </div>
